--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,10 @@ version: '3'
 services:
   bot:
     build:
-      context: "."
+      context: .
       dockerfile: Dockerfile
     volumes:
-      - "/codebase:/codebase"
-      - "/storage:/storage"
-    restart: always
-    image: ameba_bot_telegram
+      - ./storage:/app/storage
     env_file:
       - .env
+    restart: always
